Fill in part of preamble, need to complete abstract.

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,12 +1,12 @@
 \title{The Full Thesis Title should appear here}
-\author{John Henry Candidate}
+\author{William Weir}
 % Faculty of Life Sciences people should comment the next line out
 \school{Mathematics}
 \faculty{Engineering and Physical Sciences}
 \def\wordcount{xxxxx}
 
 % Uncomment the line below to suppress the `List of Tables' page (optional)
-%\tablespagefalse
+\tablespagefalse
 
 % Uncomment the line below to suppress the `List of Figures' page (optional)
 %\figurespagefalse
@@ -16,26 +16,24 @@
 
 \beforeabstract
 
-Write your abstract here: Remember, it must fit on this A4 page and should
-describe contents of the thesis/dissertation. Here might also be a good place
-to indicate what you have achieved in the thesis/dissertation and, in the
-case of a PhD, what new results you have discovered. Note that for a PhD
-single-spacing is used throughout the Abstract, including displayed equations
-\[
-e = mc^{2}
-\]
-as for the above example.
+% Abstract
+
+The solution to the Helmholtz equation is... 
+
+Multigrid is an optimal solver for 
+
+This work extends existing...
 
 \afterabstract
 
-% The next part is optional; however it is a good place to thank your
-% supervisor and the people responsible for providing computer support ;-)
 \prefacesection{Acknowledgements}
-I would like to thank...
 
-% The next line is NOT optional and MUST appear
-\afterpreface
+I would like to thank my supervisor, Matthias Heil.
+The help and support that I have received has been invaluable during this project.
 
+Also his PhD students, Puneet Matharu and Jonathan Deakin.
+Thank you for taking the time to talk through the many problems that I came up against.
 
-% Finally, you can start writing about all the new theorems you have proved
-% and all the new results that you have discovered
+Finally, I am grateful for all of the interesting discussions and biscuits at the Monday afternoon \texttt{oomph-lib} lunches.
+These have introduced me to a wide range of topics that I would otherwise have not had access to.
+
