Time complexity does not have a hyphen.

--- a/multigrid.tex
+++ b/multigrid.tex
@@ -6,7 +6,7 @@
 
 Multigrid refers to a family of methods that several meshes with different resolutions in order to achieve high rates of convergence to solve linear systems.
 These methods were developed to solve discretisation of elliptic partial differential equations, such as the Poisson problem.
-The algorithm time-complexity is linear in the number of equations, making multigrid an optimal solver for many problems.
+The algorithm time complexity is linear in the number of equations, making multigrid an optimal solver for many problems.
 Multigrid can be applied iteratively as a solver or as a preconditioner to find the solution to a linear system.
 For our problem, we will solve the Helmholtz equation by using multigrid as a preconditioner for the FGMRES iterative method.
 
